--- a/css/SHISEIDO.css
+++ b/css/SHISEIDO.css
@@ -21,7 +21,7 @@ body {
   margin-right: 50px;
   padding-top: 10px;
 }
-.wapper .header_menu-div .header_menu {
+.header_menu-div .header_menu {
   list-style: none;
   width: auto;
 }
@@ -83,7 +83,7 @@ button.play_button {
   margin-top: 30px;
   border-bottom: 1px white solid;
   border-top: 1px white solid;
-  width: 80%;
+  width: 900px;
   margin-right: auto;
   margin-left: auto;
   padding-top: 10px;
