--- a/css/SHISEIDO.css
+++ b/css/SHISEIDO.css
@@ -12,7 +12,7 @@ body {
 .top_back-ground {
   width: 100%;
   height: 600px;
-  background-image: url("../../Desktop/SHISEIDO/TOP.jpg");
+  background-image: url("../../../Desktop/SHISEIDO/TOP.jpg");
   background-size: cover;
   background-repeat: no-repeat;
 }
