--- a/css/reset.css
+++ b/css/reset.css
@@ -12,3 +12,27 @@ ul {
 a {
   text-decoration: none;
 }
+.section-item ul .bgc_green {
+  background-color: #87a589;
+}
+.section-item ul .bgc_pink {
+  background-color: #cc90a5;
+}
+.section-item ul .bgc_gray {
+  background-color: #a3a3a3;
+}
+.section-item ul .bgc_blue {
+  background-color: #80a2af;
+}
+.section-item ul .bgc_yellow {
+  background-color: #ccbb76;
+}
+.section-item ul .bgc_papple {
+  background-color: #9e7b97;
+}
+.section-item ul .bgc_lavender {
+  background-color: #9398bb;
+}
+.section-item ul .bgc_blown {
+  background-color: #b08475;
+}
