--- a/css/T_floa.css
+++ b/css/T_floa.css
@@ -1,14 +1,20 @@
+body {
+  background-color: wheat;
+}
 /* ---ヘッダーメニュー--- */
 
 .header_menu-wrap {
   height: 100px;
-  background-color: #b28850;
+  background-color: ghostwhite;
 }
 .title {
   width: auto;
   height: 48px;
   position: relative;
   text-align: center;
+}
+.title span {
+  font-size: 25px;
 }
 .header_menu {
   position: absolute;
@@ -24,10 +30,10 @@
   margin-left: 20px;
 }
 .header_menu li a {
-  color: white;
+  color: black;
   text-decoration: none;
   padding-bottom: 5px;
-  border-bottom: 1px white solid;
+  border-bottom: 1px black solid;
 }
 .breadcrumb_list {
   background-color: #b3d4fc;
@@ -54,6 +60,7 @@
 /* ---メインコンテンツ---*/
 .page-title {
   height: 170px;
+  background-color: white;
 }
 .page-title h2 {
   padding: 67px;
@@ -62,20 +69,22 @@
   line-height: 1.06;
   text-align: center;
 }
-/* ---section--- */
 .section-inner {
   position: relative;
   width: 900px;
   margin: 0 auto;
 }
-main section {
+section {
   display: flex;
-  margin: 0 30px 24px 30px;
   justify-content: space-between;
-  padding: 42px;
+  padding: 40px;
 }
-.floor4 {
+.floor {
   margin-top: 60px;
+  background-color: white;
+}
+.floor:last-child {
+  margin-bottom: 80px;
 }
 section .floor-map {
   display: block;
@@ -104,15 +113,17 @@ section header p {
 .floor-square {
   width: 370px;
 }
-.floorguide-square {
-  display: flex;
+.floorguide-square:not(:last-child) {
   margin-bottom: 26px;
   padding-bottom: 30px;
   border-bottom: 1px solid #b28850;
+}
+.floorguide-square {
+  display: flex;
   flex-wrap: wrap;
 }
 
-.floor-square h4 {
+.floorguide-square h4 {
   width: 100%;
   margin-bottom: 6px;
   color: #b28850;
@@ -122,40 +133,47 @@ section header p {
   letter-spacing: 0;
   line-height: 1;
 }
-.floor-square p {
+.floorguide-square p {
   flex-basis: 100%;
   margin-bottom: 15px;
   color: #666;
   font-size: 14px;
   letter-spacing: 0.7px;
 }
-.floor-square .section-item {
+.floorguide-square .section-item {
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 }
-.floor-square img {
+.floorguide-square img {
   display: inline-block;
   flex-basis: 150px;
   width: 150px;
   height: 150px;
   vertical-align: top;
 }
-.floor-square .section-category {
+.floorguide-square .section-category {
   width: 200px;
 }
-.floor-square ul {
+.floorguide-square ul {
   display: inline-block;
 }
-.floor-square ul li {
+.floorguide-square ul li {
+  display: inline-block;
   padding: 4px 10px;
   margin-bottom: 6px;
   font-size: 13px;
   color: white;
 }
-.floor-square a {
+.floorguide-square a {
+  display: flex;
+  height: 48px;
+  padding: 4px 24px;
   margin-top: 24px;
+  align-items: center;
   border: 1px solid #b28850;
   color: #b28850;
-  width: 100%;
+  font-size: 14px;
 }
+/* --- メインコンテンツ end--- */
